--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
+    "firebase": "^10.7.1",
     "flowbite-react": "^0.7.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -22,6 +23,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.4.0"
   },
